docs/v0.2.0a41/_sources/reference/_autosummary/hpcflow.sdk.core.element.ElementIteration.rst.txt
hpcflow.sdk.core.element.ElementIteration
=========================================

.. currentmodule:: hpcflow.sdk.core.element

.. autoclass:: ElementIteration
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:
   
   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~ElementIteration.get
      ~ElementIteration.get_EAR_dependencies
      ~ElementIteration.get_data_idx
      ~ElementIteration.get_dependent_EARs
      ~ElementIteration.get_dependent_element_iterations
      ~ElementIteration.get_dependent_elements
      ~ElementIteration.get_dependent_tasks
      ~ElementIteration.get_element_dependencies
      ~ElementIteration.get_element_iteration_dependencies
      ~ElementIteration.get_input_dependencies
      ~ElementIteration.get_parameter_names
      ~ElementIteration.get_parameter_sources
      ~ElementIteration.get_task_dependencies
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ElementIteration.EARs_initialised
      ~ElementIteration.action_runs
      ~ElementIteration.actions
      ~ElementIteration.data_idx
      ~ElementIteration.element
      ~ElementIteration.global_idx
      ~ElementIteration.index
      ~ElementIteration.input_files
      ~ElementIteration.inputs
      ~ElementIteration.iteration_ID
      ~ElementIteration.loop_idx
      ~ElementIteration.output_files
      ~ElementIteration.outputs
      ~ElementIteration.schema_parameters
      ~ElementIteration.task
      ~ElementIteration.workflow
   
   