docs/v0.4.0a13/_sources/reference/_autosummary/hpcflow.sdk.core.element.ElementIteration.rst.txt
hpcflow.sdk.core.element.ElementIteration
=========================================

.. currentmodule:: hpcflow.sdk.core.element

.. autoclass:: ElementIteration
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~ElementIteration.get
      ~ElementIteration.get_EAR_dependencies
      ~ElementIteration.get_data_idx
      ~ElementIteration.get_dependent_EARs
      ~ElementIteration.get_dependent_element_iterations
      ~ElementIteration.get_dependent_elements
      ~ElementIteration.get_dependent_tasks
      ~ElementIteration.get_element_dependencies
      ~ElementIteration.get_element_iteration_dependencies
      ~ElementIteration.get_environment_spec
      ~ElementIteration.get_input_dependencies
      ~ElementIteration.get_parameter_names
      ~ElementIteration.get_parameter_sources
      ~ElementIteration.get_resources
      ~ElementIteration.get_resources_obj
      ~ElementIteration.get_task_dependencies
      ~ElementIteration.get_template_resources
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ElementIteration.EAR_IDs
      ~ElementIteration.EAR_IDs_flat
      ~ElementIteration.EARs_initialised
      ~ElementIteration.action_runs
      ~ElementIteration.actions
      ~ElementIteration.data_idx
      ~ElementIteration.element
      ~ElementIteration.id_
      ~ElementIteration.index
      ~ElementIteration.input_files
      ~ElementIteration.inputs
      ~ElementIteration.is_pending
      ~ElementIteration.loop_idx
      ~ElementIteration.loop_skipped
      ~ElementIteration.output_files
      ~ElementIteration.outputs
      ~ElementIteration.schema_parameters
      ~ElementIteration.task
      ~ElementIteration.workflow
   
   